# profesh-gpt

./: README.md
backend/: .gitignore  README.md  alembic.ini  env.sample  pyproject.toml
backend/.docker/: docker-compose.yml
backend/.docker/qdrant/: Dockerfile
backend/src/: main.py
backend/src/common/: config.py  constants.py  logger.py
backend/src/common/utils/: dependencies.py  exception_handlers.py  exceptions.py  response.py  routes.py  routes_logger.py
backend/src/database/: redis.py
backend/src/database/postgres/: postgres_client.py
backend/src/database/postgres/migrations/: env.py
backend/src/database/qdrant/: qdrant_client.py
backend/src/database/redis/: redis_client.py
backend/src/database/storage_bucket/: storage_bucket_client.py
backend/src/database/supabase/migrations/: 20250810085343_remote_schema.sql
backend/src/modules/agent/controllers/: agent_controller.py
backend/src/modules/agent/core/: ai_agent.py
backend/src/modules/agent/dependencies/: agent_dependencies.py
backend/src/modules/agent/models/: agent_model.py
backend/src/modules/agent/repositories/: agent_repository.py  agent_status_repository.py  embedding_repository.py
backend/src/modules/agent/respositories/: agent_status_repository.py
backend/src/modules/agent/schemas/: agent_schemas.py
backend/src/modules/agent/services/: agent_crud_service.py  agent_service.py  embedding_service.py
backend/src/modules/agent/utils/: conversion_utils.py
backend/src/workers/: dependencies.py  main.py
backend/src/workers/tasks/: agent_tasks.py
docs/: README.md
(+30 files in other folders)
