[project]
name = "fastapi-celery-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
]
