[project]
name = "fastapi-celery-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "colorama>=0.4.6",
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "openai-agents>=0.2.4",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "alembic>=1.13.0",
    "workos>=5.26.1",
    "sqlmodel>=0.0.24",
    "psycopg2>=2.9.10",
    "supabase>=2.0.0",
    "aiofiles>=23.0.0",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.0.20",
    "pypdf>=5.9.0",
]
